add concepts and general modeling assumption

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# <center> Optimizing Multi-core CPU Scheduling </center>\n",
     "\n",
-    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.com), Tao Ji (email address), and Yanting Liang (email address) </center>\n",
+    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.edu), Tao Ji (tji24@wisc.edu), and Yanting Liang (email address) </center>\n",
     "#### <center> Instructor: Prof. Laurent Lessard </center>\n",
     "#### <center> May 7<sup>th</sup>, 2018 </center>\n",
     "\n",
@@ -27,17 +27,17 @@
     "  3. [Report Outline](#1.3.-Report-Outline)\n",
     "2. [Mathematical Model](#2.-Mathematical-Model)\n",
     "  1. [Perfect Information](#2.1.-Perfect-Information)\n",
-    "    1. [Knowing Arrival Time & Duration](#2.1.1.-Knowing-Arrival-Time&-Duration)\n",
+    "    1. [Knowing Arrival Time & Duration](#2.1.1.-Knowing-Arrival-Time-&-Duration)\n",
     "    2. [Multicores](#2.1.2.-Multicores)\n",
     "    3. [Process Dependency](#2.1.3.-Process-Dependency)\n",
     "  2. [Robust Integer Programming](#2.2.-Robust-Programming)\n",
     "    1. [Unknown Duration](#2.2.1.-Unknown-Duration)\n",
-    "    2. [Unknown Duration & Unknown Arrival Time](#2.2.2.-Unknown-Duration&-Unknown-Arrival-Time)\n",
+    "    2. [Unknown Duration & Unknown Arrival Time](#2.2.2.-Unknown-Duration-&-Unknown-Arrival-Time)\n",
     "  3. [Stochastic](#2.3.-Stochastic)\n",
     "    1. [Unknown Duration](#2.3.1.-Unknown-Duation)\n",
-    "    2. [Unknown Duration & Unknown Arrival Time](#2.3.2.-Unknown-Duration&-Unknown-Arrival-Time)\n",
+    "    2. [Unknown Duration & Unknown Arrival Time](#2.3.2.-Unknown-Duration-&-Unknown-Arrival-Time)\n",
     "3. [Solution](#3.-Solution)\n",
-    "4. [Results and Discussion](#4.-Results-and-discussion)\n",
+    "4. [Results and Discussion](#4.-Results-And-Discussion)\n",
     "5. [Conclusion](#5.-Conclusion)\n",
     "6. [References](#6.-References)\n",
     "\n",
@@ -82,6 +82,7 @@
     "How the CPU, the bottleneck device in the whole computer, is scheduled, has a huge impact on the performance of the computer system. To make better decisions, the following objectives have to be met:\n",
     "\n",
     "- Minimize the total turnaround time: turnaround time is the period of time between the arrival of a process and the time it is finished, which should be as small as possible;\n",
+    "- Maximize the number of processes that can be completed in a certain period of time, i.e. maximize the throughput.\n",
     "- Be fair to every process: there should not be any process being wait for a long time without being executed;\n",
     "- Be as responsive as possible: a process should be treated soon after its arrival;\n",
     "\n",
@@ -98,9 +99,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Mathematical model ##\n",
-    "### 2.A Perfect Information ###\n",
-    "#### 2.A.a Knowing Arrival Time & Duration ####\n",
+    "## 2. Mathematical Model ##\n",
+    "\n",
+    "Before we talking about the mathematical models, here are several terms and concepts the reader need to know:\n",
+    "\n",
+    "- **CPU-bound(compute-bound) process**: when running, tends to use all the processor time that allocated to it;\n",
+    "- **I/O-bound process**: tends to use the processor only briefly before generating I/O request and relinquishes the processor;\n",
+    "- **Process vs Thread**: they are both independent sequences of execution and the typical difference is that threads(of the same process) run in a shared memory space, while processes run in separate memory spaces;\n",
+    "- **Turnaround time**: the amount of time to execute a particular process(from submission to complete servicing);\n",
+    "    - $T_{turnaround}=T_{completion}-T_{arrival}$\n",
+    "- **Waiting time**: the amount of time a process was waiting in the ready queue(not being served);\n",
+    "- **Response time**: the amount of time it takes from when a process(job) is submitted to the first time it is scheduled(arrived but not getting served yet);\n",
+    "    - An important performance metric of interactive tasks\n",
+    "- **Throughput**: average number of processes that complete their execution per time unit;\n",
+    "- **Fairness**: all similar processes are treated the same, and even if processes are in different priority classes, no process should suffer indefinite postponement(starvation) due to scheduling;\n",
+    "- **Context-switch cost**: a context switch is the process of storing the state of a process or of a thread, so that it can be restored and execution resumed from the same point later(context-switch from one core to another is more expensive than swiching on the same core);\n",
+    "    - A kind of extra cost that we want to avoid\n",
+    "\n",
+    "Although the realistc problem is actually really complicated and thorny, our key insights could help a lot the formulation of the model from the problem.\n",
+    "\n",
+    "- All process could be seen as only using the CPU, i.e. no I/O. The reason behind is that jobs with I/O interact with the CPU for a tiny time period and then access the I/O so that they can be treated with each CPU burst(separated by I/O) as an independent job.\n",
+    "- Treat each thread as a process. Because they are both indenpendent execution of programs, both have context switch cost (and in fact in many modern OSs like Linux they are treated the same way).\n",
+    "\n",
+    "### 2.1. Perfect Information ###\n",
+    "#### 2.1.1. Knowing Arrival Time & Duration ####\n",
     "We divide the time horizon into a number of time units. We only consider time in $(0, m]$ where $m$ is the maximum possible processing time. Let $\\mathcal{T}$ denote the set of time units, and $|\\mathcal{T}|=m$. Let $\\mathcal{N}$ denote the set of tasks, where $|\\mathcal{N}|=n$. Each process $n \\in \\mathcal{N}$ has following attributes: duration $s_n$, arrival time $t_n$. \n",
     "\n",
     "<img src=\"assignment_graph.png\" width=\"400\" height=\"400\" />\n",
@@ -148,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.A.b Multicores ####\n",
+    "#### 2.1.2. Multicores ####\n",
     "\n",
     "Let $\\mathcal{C}$ denote the set of cores, and $|\\mathcal{C}|=c$. Binary decision variable $x_{ijk}$ donote the i-th process is assigned to the j-th time unit of core k. Another cost $S_c(x)$ is imposed if tasks is switched between cores. Now the standard form of the model can be rewritten as: \n",
     "\n",
@@ -167,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.A.c Process Dependency ####\n",
+    "#### 2.1.3. Process Dependency ####\n",
     "If process h is dependent on process g, which means process h should be hanlded strictly after g temporally. \n",
     "\n",
     "$$\n",
@@ -181,8 +203,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.B Robust Programming ###\n",
-    "#### 2.B.a Unknown Duration ####\n",
+    "### 2.2. Robust Programming ###\n",
+    "#### 2.2.1. Unknown Duration ####\n",
     "If the duration of the process is uncertain and is subject to some distribution. Let $\\bar{s}$ denote the average duration. \n",
     "\n",
     "$$\n",
@@ -191,9 +213,9 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "#### 2.B.b Unknown Duration & Unknown Arrival Time ####\n",
+    "#### 2.2.2. Unknown Duration & Unknown Arrival Time ####\n",
     "\n",
-    "Sleepy zzZ"
+    "Sleepy zzZ (Pijian)"
    ]
   },
   {
@@ -212,9 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -255,7 +275,7 @@
     "collapsed": true
    },
    "source": [
-    "## 4. Results and discussion ##\n",
+    "## 4. Results And Discussion ##\n",
     "\n",
     "Here, you display and discuss the results. Show figures, plots, images, trade-off curves, or whatever else you can think of to best illustrate your results. The discussion should explain what the results mean, and how to interpret them. You should also explain the limitations of your approach/model and how sensitive your results are to the assumptions you made.\n",
     "\n",
@@ -265,11 +285,7 @@
     "| ------------- |:-------------:| -----:|\n",
     "| col 3 is      | right-aligned |\\$1600 |\n",
     "| col 2 is      | centered      |  \\$12 |\n",
-    "| zebra stripes | are neat      |   \\$1 |\n",
-    "\n",
-    "### 4.A. Feel free to add subsections\n",
-    "\n",
-    "#### 4.A.a. or subsubsections"
+    "| zebra stripes | are neat      |   \\$1 |"
    ]
   },
   {
@@ -293,7 +309,8 @@
     "\n",
     "1. Operating Systems, Wikipedia, refer to https://en.wikipedia.org/wiki/Operating_system\n",
     "2. Time-sharing, Wikipedia, refer to https://en.wikipedia.org/wiki/Time-sharing\n",
-    "3. History of CPU process scheduling, refer to http://dave-reed.com/csc539.S05/Lectures/CPUsched.ppt"
+    "3. History of CPU process scheduling, refer to http://dave-reed.com/csc539.S05/Lectures/CPUsched.ppt\n",
+    "4. Context Switch, Wikipedia, refer to https://en.wikipedia.org/wiki/Context_switch#Cost"
    ]
   },
   {
