--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# <center> Optimizing Multi-core CPU Scheduling </center>\n",
     "\n",
-    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.edu), Tao Ji (tji24@wisc.edu), and Yanting Liang (email address) </center>\n",
+    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.edu), Tao Ji (tji24@wisc.edu), and Yanting Liang (yliang73@wisc.edu) </center>\n",
     "#### <center> Instructor: Prof. Laurent Lessard </center>\n",
     "#### <center> May 7<sup>th</sup>, 2018 </center>\n",
     "\n",
