--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# <center> Optimizing Multi-core CPU Scheduling </center>\n",
     "\n",
-    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.edu), Tao Ji (tji24@wisc.edu), and Yanting Liang (yliang73@wisc.edu) </center>\n",
+    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.edu), Tao Ji (tji24@wisc.edu), and Yanting Liang (email address) </center>\n",
     "#### <center> Instructor: Prof. Laurent Lessard </center>\n",
     "#### <center> May 7<sup>th</sup>, 2018 </center>\n",
     "\n",
@@ -147,23 +147,17 @@
     "$$\n",
     "\n",
     "Each feasible assignment $\\mathbf{x}$ is measured by turnaround time $T(\\mathbf{x})$, fairness $F(\\mathbf{x})$, responsiveness $R(\\mathbf{x})$. And cost $S(\\mathbf{x})$ is included to penalize switch of processed between time units. \n",
-    "The turnaround time is defined as the largest time unit that has been assigned, hence,\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "T(\\mathbf{x}) =\\max_j\\{j\\sum_{i = 0}^n x_{ij}\\}\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "The reponsiveness measure for i-th process is minimal j such that $x_{ij}$ is 1.\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "R_i(\\mathbf{x}) =\\min\\{j|x_{ij} = 1\\}\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "The standard form of the model can be written as: \n",
     "\n",
+    "The standard form of the model can be written as: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{minimize}}\\qquad& T(x)+F(x)+R(x)+S(x)\\\\\n",
+    "\\underset{x \\in \\mathbb{R^{nm}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)\\\\\n",
     "\\text{subject to:}\\qquad& \\sum_{j = t_i}^m x_{ij} = s_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{j = 1}^{t_i} x_{ij} = 0 \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{i=1}^n x_{ij} \\leq 1 \\qquad \\forall j \\in \\mathcal{T}\\\\\n",
@@ -182,7 +176,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^{n×m×c}}}{\\text{minimize}}\\qquad& T(x)+F(x)+R(x)+S(x)+S_c(x) \\\\\n",
+    "\\underset{x \\in \\mathbb{R^{nmc}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-S(x)-S_c(x) \\\\\n",
     "\\text{subject to:}\\qquad& \\sum_{k = 1}^c \\sum_{j = t_i}^m x_{ijk} = s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{k = 1}^c \\sum_{j = 1}^{t_i} x_{ijk} = 0 \\quad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{i=1}^n x_{ijk} \\leq 1 \\quad \\forall j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\\\\\n",
@@ -214,47 +208,14 @@
     "If the duration of the process is uncertain and is subject to some distribution. Let $\\bar{s}$ denote the average duration. \n",
     "\n",
     "$$\n",
-    "\\begin{aligned}\n",
-    "s_i = \\bar{s_i}+\\rho_iu\\\\\n",
-    "||u|| \\leq 1\n",
-    "\\end{aligned}\n",
+    "\\begin{align}\n",
+    "s_i = \\bar{s_i}+\\rho_iu\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "#### 2.2.2. Unknown Duration & Unknown Arrival Time ####\n",
     "\n",
-<<<<<<< HEAD
-    "$$\n",
-    "\\begin{aligned}\n",
-    "t_i = \\bar{t_i}+\\rho_iu\\\\\n",
-    "||u|| \\leq 1\n",
-    "\\end{aligned}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.C Stochastic Programming ###\n",
-    "#### 2.C.a Unknown Duration ####\n",
-    "Use Certainty Equivalent form of Stochastic Programming:\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "s_i = \\mathop{\\mathbb{E}} \\hat{s_i}\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "#### 2.C.b Unknown Duration & Unknown Arrival Time ####\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "t_i = \\mathop{\\mathbb{E}} \\hat{t_i}\n",
-    "\\end{aligned}\n",
-    "$$"
-=======
     "Sleepy zzZ (Pijian)"
->>>>>>> 61ea5a1fcebb7f36b7625d286789549bffaa61ea
    ]
   },
   {
