--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# <center> Optimizing Multi-core CPU Scheduling </center>\n",
     "\n",
-    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.edu), Tao Ji (tji24@wisc.edu), and Yanting Liang (yliang73@wisc.edu) </center>\n",
+    "#### <center> Haoran Qiu (hqiu35@wisc.edu), Jian Wu (jwu384@wisc.edu), Tao Ji (tji24@wisc.edu), Yanting Liang (yliang73@wisc.edu) </center>\n",
     "#### <center> Instructor: Prof. Laurent Lessard </center>\n",
     "#### <center> May 7<sup>th</sup>, 2018 </center>\n",
     "\n",
@@ -57,7 +57,7 @@
     "Sitting in front of your personal computer, perhaps you are playing a video game, browsing a website, and having a chat with your friends via WeChat at the same time. How could it be possible to open so many applications on a computer and run them at the same time? Who is in charge here? The answer is the operating system.\n",
     "\n",
     "<img src=\"operating_system.jpg\" width=\"450\" height=\"400\" />\n",
-    "<center>Fig. 1: Operating system makes it possible to run multiple applications at the same time</center>\n",
+    "###### <center>Fig. 1: Operating system makes it possible to run multiple applications at the same time</center> ######\n",
     "\n",
     "The **Operating System**(OS) is a really important piece of software present in virtually all computer systems, which manages computer hardware and softwares and provides common resources for computer programs. A computer program is a piece of code but it lives as a process when it is being executed. One of the duties of an operating system is to schedule processes to run on the computer. In 1950s, process scheduling was not an issue because there is not so much process so that the OS can serve all users/processes one by one. When it came to 1960s - early 1980s, multiprogramming and time-sharing evolves([history](https://en.wikipedia.org/wiki/Timeline_of_operating_systems)). Process scheduling should handle multiple processes, swap job to avoid idleness. There will be many processes that want to be executed. Time-sharing OS allows many users/processes to share the computing resources such as main memory, input/output(I/O) devices, files, etc.\n",
     "\n",
@@ -65,7 +65,7 @@
     "\n",
     "<!--![A shot of processes running on a multicore CPU and the resource usage](cpu_scheduling.png =100x20)-->\n",
     "<img src=\"cpu_scheduling.png\" width=\"540\" height=\"270\" />\n",
-    "<center>Fig. 2: A shot of processes running on a 4-core CPU and the resource usage</center>\n",
+    "###### <center>Fig. 2: A shot of processes running on a 4-core CPU and the resource usage</center> ######\n",
     "\n",
     "The job of the scheduler is to assign tasks to CPUs, i.e. what is the next process to be run on which CPU. For a computer, there could be multiple CPUs and each CPU could have multiple cores. For a process, it could generate a number of threads to be executed at the same time. Since every core in a CPU could run its assigned task at the same time, we could seen a core as the most basic execution unit. In addition, since a thread is similar as a process(and in some OS they are treat nearly the same way) we could seen a thread as a process. Therefore, the number of processes that can be run at the same time($X$) can be expressed by the multiplication of the number of CPUs($C$) and the number of cores per CPU($c_{i}$):\n",
     "\n",
