--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -26,22 +26,26 @@
     "  2. [Goals and Objectives](#1.2.-Goals-and-Objectives)\n",
     "  3. [Report Outline](#1.3.-Report-Outline)\n",
     "2. [Mathematical Model](#2.-Mathematical-Model)\n",
-    "  1. [Perfect Information](#2.1.-Perfect-Information)\n",
-    "    1. [Knowing Arrival Time & Duration](#2.1.1.-Knowing-Arrival-Time-&-Duration)\n",
-    "    2. [Multicores](#2.1.2.-Multicores)\n",
-    "    3. [Process Dependency](#2.1.3.-Process-Dependency)\n",
-    "  2. [Robust Integer Programming](#2.2.-Robust-Programming)\n",
-    "    1. [Unknown Duration](#2.2.1.-Unknown-Duration)\n",
-    "    2. [Unknown Duration & Unknown Arrival Time](#2.2.2.-Unknown-Duration-&-Unknown-Arrival-Time)\n",
-    "  3. [Stochastic](#2.3.-Stochastic)\n",
-    "    1. [Unknown Duration](#2.3.1.-Unknown-Duation)\n",
-    "    2. [Unknown Duration & Unknown Arrival Time](#2.3.2.-Unknown-Duration-&-Unknown-Arrival-Time)\n",
+    "  1. [Concepts & Terminologies](#2.1.-Concepts-&-Terminologies)\n",
+    "  2. [Metric for Objectives](#2.2.-Metric-for-Objectives)\n",
+    "  3. [Perfect Information](#2.3.-Perfect-Information)\n",
+    "    1. [Knowing Arrival Time & Duration](#2.3.1.-Knowing-Arrival-Time-&-Duration)\n",
+    "    2. [Multicores](#2.3.2.-Multicores)\n",
+    "    3. [Process Dependency](#2.3.3.-Process-Dependency)\n",
+    "  4. [Robust Integer Programming](#2.4.-Robust-Programming)\n",
+    "    1. [Unknown Duration](#2.4.1.-Unknown-Duration)\n",
+    "    2. [Unknown Duration & Unknown Arrival Time](#2.4.2.-Unknown-Duration-&-Unknown-Arrival-Time)\n",
+    "  5. [Stochastic](#2.5.-Stochastic)\n",
+    "    1. [Unknown Duration](#2.5.1.-Unknown-Duation)\n",
+    "    2. [Unknown Duration & Unknown Arrival Time](#2.5.2.-Unknown-Duration-&-Unknown-Arrival-Time)\n",
     "3. [Solution](#3.-Solution)\n",
     "4. [Results and Discussion](#4.-Results-And-Discussion)\n",
     "5. [Conclusion](#5.-Conclusion)\n",
     "6. [References](#6.-References)\n",
     "\n",
-    "*****"
+    "*****\n",
+    "\n",
+    "**Interactive design**: In solution part, readers can choose whether they want to make their CPU scheduler to emphasize fairness, efficiency, or responsiveness by adjusting weight to corresponding metrics."
    ]
   },
   {
@@ -88,7 +92,7 @@
     "\n",
     "### 1.3. Report Outline ###\n",
     "\n",
-    "This report will divide the whole problem into multiple stages, progressiely solving more complex versions of this problem. Staring with something simple that we know the arrival time and the duraiton of each process(model 2.A.a.), then comes multicores(model 2.A.b.), then we deal with process dependencies(model 2.A.c.). After talking about models under perfect information, we will use two different models: robust programming(model 2.B.) and stochastic programming(model 2.C.) to deal with uncertainty in arrival time and duraiton of processes.\n",
+    "First of all, several key terminologies will be introduced in section 2.1., followed by a section introducing the metric we used in our models to measure the objectives. This report will divide the whole problem into multiple stages, progressively solving more complex versions of this problem. Starting with something simple that we know the arrival time and the duraiton of each process(model 2.3.1.), then comes multicores(model 2.3.2.), then we deal with process dependencies(model 2.3.3.). After talking about models under perfect information, we will use two different models: robust programming(model 2.4.) and stochastic programming(model 2.5.) to deal with uncertainty in arrival time and duraiton of processes.\n",
     "\n",
     "After presenting the models, we will give our solutions to each of the models and discuss about the result of the solutions. Different test cases and data can be come up with or drawn from the internet. Comparisons between our scheduling optimization and extant scheduling algorithms will also be made in the discussion section.\n",
     "\n",
@@ -101,10 +105,13 @@
    "source": [
     "## 2. Mathematical Model ##\n",
     "\n",
+    "### 2.1. Concepts & Terminologies ###\n",
+    "\n",
     "Before we talking about the mathematical models, here are several terms and concepts the reader need to know:\n",
     "\n",
     "- **CPU-bound(compute-bound) process**: when running, tends to use all the processor time that allocated to it;\n",
     "- **I/O-bound process**: tends to use the processor only briefly before generating I/O request and relinquishes the processor;\n",
+    "    - Usually interactive, i.e. it is real-time and need **immediate reaction** from the OS, e.g. pressing a key on the keyboard\n",
     "- **Process vs Thread**: they are both independent sequences of execution and the typical difference is that threads(of the same process) run in a shared memory space, while processes run in separate memory spaces;\n",
     "- **Turnaround time**: the amount of time to execute a particular process(from submission to complete servicing);\n",
     "    - $T_{turnaround}=T_{completion}-T_{arrival}$\n",
@@ -121,9 +128,40 @@
     "- All process could be seen as only using the CPU, i.e. no I/O. The reason behind is that jobs with I/O interact with the CPU for a tiny time period and then access the I/O so that they can be treated with each CPU burst(separated by I/O) as an independent job.\n",
     "- Treat each thread as a process. Because they are both indenpendent execution of programs, both have context switch cost (and in fact in many modern OSs like Linux they are treated the same way).\n",
     "\n",
-    "### 2.1. Perfect Information ###\n",
-    "#### 2.1.1. Knowing Arrival Time & Duration ####\n",
-    "We divide the time horizon into a number of time units. We only consider time in $(0, m]$ where $m$ is the maximum possible processing time. Let $\\mathcal{T}$ denote the set of time units, and $|\\mathcal{T}|=m$. Let $\\mathcal{N}$ denote the set of tasks, where $|\\mathcal{N}|=n$. Each process $n \\in \\mathcal{N}$ has following attributes: duration $s_n$, arrival time $t_n$. \n",
+    "### 2.2. Metric for Objectives ###\n",
+    "\n",
+    "- Turnaround time: Let $A_{i}$, $F_{i}$, and $D_{i}$ be the arrival time, finish time, and duration of the i-th process respectively. Thus the metric for the turnaround time is:\n",
+    "<br><br>\n",
+    "$$T(\\boldsymbol{X})=\\frac{\\sum_{i=1}^n (F_{i}-A_{i})}{\\sum_{i=1}^n D_{i}}$$\n",
+    "<br>\n",
+    "- Fairness: Let $W_{i}$ be the total amount of waiting time for the i-th process(after the arrival and before complete), then fairness can be measured by the variance:\n",
+    "<br><br>\n",
+    "$$\n",
+    "F(\\boldsymbol{X})=\\sigma^2\\\\\n",
+    "\\sigma^2 = \\frac{\\sum_{i=1}^{n}(W_i - \\mu)^2} {n}\\\\\n",
+    "\\mu = \\frac{\\sum_{i=1}^n W_{i}}{n}\n",
+    "$$\n",
+    "<br>\n",
+    "- Responsiveness: Let $S_{i}$ be the time when the process i first being served, and the metric is:\n",
+    "<br><br>\n",
+    "$$R(\\boldsymbol{X})=\\sum_{i=1}^n S_i$$\n",
+    "<br>\n",
+    "- Cost: Let $\\Psi(p, q, i, j)$ be the context switch cost of switching on core $p$ from process i to process j, and process j' previous state information is stored near core $q$. The total cost is:\n",
+    "<br><br>\n",
+    "$$\n",
+    "\\Psi(p, q, i, j) = \\begin{cases} \n",
+    "      0 & i=j \\\\\n",
+    "      \\psi_1 & i\\neq j, p = q \\\\\n",
+    "      \\psi_2 & i\\neq j, p\\neq q \n",
+    "   \\end{cases}\\\\\n",
+    "C(\\boldsymbol{X})=\\sum_{t=2}^m \\Psi(p, q, i, j)\n",
+    "$$\n",
+    "\n",
+    "TODO: C(X)\n",
+    "\n",
+    "### 2.3. Perfect Information ###\n",
+    "#### 2.3.1. Knowing Arrival Time & Duration ####\n",
+    "We divide the time horizon into a number of time units. We only consider time in $[0, m]$ where $m$ is the maximum possible processing time. Let $\\mathcal{T}$ denote the set of time units, and $|\\mathcal{T}|=m$. Let $\\mathcal{N}$ denote the set of tasks, where $|\\mathcal{N}|=n$. Each process $n \\in \\mathcal{N}$ has following attributes: duration $s_n$, arrival time $t_n$. \n",
     "\n",
     "<img src=\"assignment_graph.png\" width=\"400\" height=\"400\" />\n",
     "<center>Fig. 3: An example of time units assignment</center>\n",
@@ -170,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1.2. Multicores ####\n",
+    "#### 2.3.2. Multicores ####\n",
     "\n",
     "Let $\\mathcal{C}$ denote the set of cores, and $|\\mathcal{C}|=c$. Binary decision variable $x_{ijk}$ donote the i-th process is assigned to the j-th time unit of core k. Another cost $S_c(x)$ is imposed if tasks is switched between cores. Now the standard form of the model can be rewritten as: \n",
     "\n",
@@ -189,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1.3. Process Dependency ####\n",
+    "#### 2.3.3. Process Dependency ####\n",
     "If process h is dependent on process g, which means process h should be hanlded strictly after g temporally. \n",
     "\n",
     "$$\n",
@@ -203,8 +241,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2. Robust Programming ###\n",
-    "#### 2.2.1. Unknown Duration ####\n",
+    "### 2.4. Robust Programming ###\n",
+    "#### 2.4.1. Unknown Duration ####\n",
     "If the duration of the process is uncertain and is subject to some distribution. Let $\\bar{s}$ denote the average duration. \n",
     "\n",
     "$$\n",
@@ -213,7 +251,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "#### 2.2.2. Unknown Duration & Unknown Arrival Time ####\n",
+    "#### 2.4.2. Unknown Duration & Unknown Arrival Time ####\n",
     "\n",
     "Sleepy zzZ (Pijian)"
    ]
