--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -149,11 +149,12 @@
     "- Cost: Let $\\Psi(p, q, i, j)$ be the context switch cost of switching on core $p$ from process i to process j, and process j' previous state information is stored near core $q$. The total cost is:\n",
     "<br><br>\n",
     "$$\n",
-    "\\Psi(p, q, i, j) = \\begin{cases} \n",
+    "\\Psi(p, q, i, j) = \n",
+    "  \\begin{cases} \n",
     "      0 & i=j \\\\\n",
     "      \\psi_1 & i\\neq j, p = q \\\\\n",
     "      \\psi_2 & i\\neq j, p\\neq q \n",
-    "   \\end{cases}\\\\\n",
+    "  \\end{cases}\\\\\n",
     "C(\\boldsymbol{X})=\\sum_{t=2}^m \\Psi(p, q, i, j)\n",
     "$$\n",
     "\n",
