--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -154,8 +154,8 @@
     "      0 & i=j \\\\\n",
     "      \\psi_1 & i\\neq j, p = q \\\\\n",
     "      \\psi_2 & i\\neq j, p\\neq q \n",
-    "  \\end{cases}\\\\\n",
-    "C(\\boldsymbol{X})=\\sum_{t=2}^m \\Psi(p, q, i, j)\n",
+    "  \\end{cases}\n",
+    "\\\\C(\\boldsymbol{X})=\\sum_{t=2}^m \\Psi(p, q, i, j)\n",
     "$$\n",
     "\n",
     "TODO: C(X)\n",
