--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -123,7 +123,7 @@
     "- **Context-switch cost**: a context switch is the process of storing the state of a process or of a thread, so that it can be restored and execution resumed from the same point later(context-switch from one core to another is more expensive than swiching on the same core);\n",
     "    - A kind of extra cost that we want to avoid\n",
     "\n",
-    "Although the realistc problem is actually really complicated and thorny, our key insights could help a lot the formulation of the model from the problem.\n",
+    "Although the realistic problem is actually really complicated and thorny, our key insights could help a lot the formulation of the model from the problem.\n",
     "\n",
     "- All process could be seen as only using the CPU, i.e. no I/O. The reason behind is that jobs with I/O interact with the CPU for a tiny time period and then access the I/O so that they can be treated with each CPU burst(separated by I/O) as an independent job.\n",
     "- Treat each thread as a process. Because they are both indenpendent execution of programs, both have context switch cost (and in fact in many modern OSs like Linux they are treated the same way).\n",
@@ -149,12 +149,14 @@
     "- Cost: Let $\\Psi(p, q, i, j)$ be the context switch cost of switching on core $p$ from process i to process j, and process j' previous state information is stored near core $q$. The total cost is:\n",
     "<br><br>\n",
     "$$\n",
-    "\\Psi(p, q, i, j) = \n",
-    "  \\begin{cases} \n",
-    "      0 & i=j \\\\\n",
-    "      \\psi_1 & i\\neq j, p = q \\\\\n",
-    "      \\psi_2 & i\\neq j, p\\neq q \n",
-    "  \\end{cases}$$\n",
+    "\\Psi(p, q, i, j) = \\left\\{\n",
+    "        \\begin{array}{ll}\n",
+    "            0 & i=j \\\\\n",
+    "            \\psi_1 & i\\neq j, p = q \\\\\n",
+    "            \\psi_2 & i\\neq j, p\\neq q \n",
+    "        \\end{array}\n",
+    "    \\right.\n",
+    "$$\n",
     "$$C(\\boldsymbol{X})=\\sum_{t=2}^m \\Psi(p, q, i, j)\n",
     "$$\n",
     "\n",
