--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -45,7 +45,9 @@
     "\n",
     "*****\n",
     "\n",
-    "**Interactive design**: In solution part, readers can choose whether they want to make their CPU scheduler to emphasize fairness, efficiency, or responsiveness by adjusting weight to corresponding metrics."
+    "#### Note: ####\n",
+    "- **Interactive design**: In solution part, readers can choose whether they want to make their CPU scheduler to emphasize fairness, efficiency, or responsiveness by adjusting weight to corresponding metrics.\n",
+    "- Please open our project in Jupyter notebook instead of viewing it in nbviewer."
    ]
   },
   {
