stochastic prog added

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -248,17 +248,37 @@
    "source": [
     "### 2.4. Robust Programming ###\n",
     "#### 2.4.1. Unknown Duration ####\n",
-    "If the duration of the process is uncertain and is subject to some distribution. Let $\\bar{s}$ denote the average duration. \n",
+    "If the duration of the process is uncertain and is subject to some distribution. Let $\\bar{s}$ denote the expected duration. \n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "s_i = \\bar{s_i}+\\rho_iu\n",
+    "s_i = \\bar{s_i}+\\rho^s_iu\\\\\n",
+    "0 \\geq ||u|| \\leq 1\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
     "#### 2.4.2. Unknown Duration & Unknown Arrival Time ####\n",
     "\n",
-    "Sleepy zzZ (Pijian)"
+    "If the arrival time of the process is uncertain and is subject to some distribution. Let $\\bar{t}$ denote the expected arrival time. \n",
+    "$$\n",
+    "\\begin{align}\n",
+    "t_i = \\bar{t_i}+\\rho^t_iu\\\\\n",
+    "0 \\geq ||u|| \\leq 1\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5. Stochastic Programming###\n",
+    "Use the Certainty Equivalence approach, use the expected value of random variables, i.e. $\\bar{s}, \\bar{t}$. \n",
+    "#### 2.5.1. Unknown Duration ####\n",
+    "$$s_i = \\bar{s_i}$$\n",
+    "#### 2.5.2. Unknown Duration & Unknown Arrival Time ####\n",
+    "$$s_i = \\bar{s_i}$$\n",
+    "$$t_i = \\bar{t_i}$$"
    ]
   },
   {
@@ -277,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
