Code added by Tao

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -264,9 +264,7 @@
    "source": [
     "## 3. Solution ##\n",
     "\n",
-    "Here, you should code up your model in Julia + JuMP and solve it. Your code should be clean, easy to read, well annotated and commented, and it should compile! You are not allowed to use other programming languages or DCP packages such as `convex.jl`. **I will be running your code**. I suggest having multiple code blocks separated by text blocks that explain the various parts of your solution. You may also solve several versions of your problem with different models/assumptions.\n",
-    "\n",
-    "It's fine to call external packages such as `Gurobi`, but try to minimize the use of exotic libraries."
+    "*Modified by Tao Ji <jitaoivan@outlook.com> on May 4, 2018*"
    ]
   },
   {
@@ -275,29 +273,39 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The total number of horses is: 10.0\n",
-      "The total number of donkeys is: 0.0\n",
-      "The total number of goats is: 0.0\n"
+      "\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mRecompiling stale cache file C:\\Users\\tao\\.julia\\lib\\v0.6\\Gurobi.ji for module Gurobi.\n",
+      "\u001b[39m"
      ]
     }
    ],
    "source": [
-    "# this is a code block\n",
-    "using JuMP, Clp\n",
-    "m = Model(solver = ClpSolver())\n",
+    "# Define input data\n",
     "\n",
-    "things = [:horses, :donkeys, :goats]  # these are the things \n",
-    "@variable(m, x[things] >= 0)          # the quantities of each of the things (can't be negative)\n",
-    "@constraint(m, sum(x) <= 10)          # we can't have any more than 10 things total\n",
-    "@objective(m, Max, x[:horses])        # we want to maximize the number of horses\n",
-    "solve(m)\n",
+    "num_tasks = 5\n",
+    "A = [0, 2, 4, 6, 8]\n",
+    "D = [3, 6, 4, 5, 2]\n",
+    "max_time = minimum(A) + sum(D)\n",
     "\n",
-    "for i in things\n",
-    "    println(\"The total number of \", i, \" is: \", getvalue(x[i]))     # print result\n",
-    "end"
+    "using JuMP, Gurobi\n",
+    "\n",
+    "m = Model(solver=GurobiSolver(OutputFlag=0))\n",
+    "@variable(m, x[1:num_tasks, 1:max_time], Bin)  # x[i, j] == 1 => task i gets executed at time j\n",
+    "@variable(m, 0 <= F[1:num_tasks] <= max_time, Int) # Finish time of each task\n",
+    "for i = 1:num_tasks\n",
+    "    for j = 1:(A[i]-1)\n",
+    "        @constraint(m, x[i,j] == 0)            # A task should not be worked on before it arrives\n",
+    "    end\n",
+    "    for j = A[i]:max_time\n",
+    "        @constraint(m, F[i] >= j*x[i, j])      # Finish time is the last 1 of each task\n",
+    "    end\n",
+    "    @constraint(m, sum(x[i]) == 0)             # Total time quantums occupied by the task should be equal to its length\n",
+    "end\n",
+    "for j = 1:max_time\n",
+    "    @constraint(m, sum(x[:,j]) <= 1)           # Each time quantum should be occupied by at most 1 task\n",
+    "end\n"
    ]
   },
   {
