--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "#### Note: ####\n",
     "- **Interactive design**: In solution part, readers can choose whether they want to make their CPU scheduler to emphasize fairness, efficiency, or responsiveness by adjusting weight to corresponding metrics.\n",
-    "- Please open our project in Jupyter notebook instead of viewing it in nbviewer."
+    "- **Latex rendering**: Please open our project in Jupyter notebook instead of viewing it in nbviewer."
    ]
   },
   {
@@ -148,7 +148,7 @@
     "<br><br>\n",
     "$$R(\\boldsymbol{X})=\\sum_{i=1}^n S_i$$\n",
     "<br>\n",
-    "- Cost: Let $\\Psi(p, q, i, j)$ be the context switch cost of switching on core $p$ from process i to process j, and process j' previous state information is stored near core $q$. The total cost is:\n",
+    "- Cost: Let $\\Psi(p, q, i, j)$ be the context switch cost of switching on core $p$ from process i to process j, and process j' previous state information is stored near core $q$. The cost of each context switch is:\n",
     "<br><br>\n",
     "$$\n",
     "\\Psi(p, q, i, j) = \\left\\{\n",
@@ -159,10 +159,18 @@
     "        \\end{array}\n",
     "    \\right.\n",
     "$$\n",
-    "$$C(\\boldsymbol{X})=\\sum_{t=2}^m \\Psi(p, q, i, j)\n",
+    "<br>\n",
+    "The total context switch cost of single-core CPU is:\n",
+    "<br><br>\n",
     "$$\n",
-    "\n",
-    "TODO: C(X)\n",
+    "C_1(\\boldsymbol{X})=\\sum_{t=2}^m \\sum_{i -> j}^{n*n} \\Psi(c, c, i, j)\n",
+    "$$\n",
+    "<br>\n",
+    "The total context switch cost of multi-core CPU is(given core set $Co$):\n",
+    "<br><br>\n",
+    "$$\n",
+    "C_2(\\boldsymbol{X})=\\sum_{t=2}^m \\sum_{p, q\\in Co} \\sum_{i -> j}^{n*n} \\Psi(p, q, i, j)\n",
+    "$$\n",
     "<br>\n",
     "- Throughput: Let $Th(x)$ be the throughput of in the time interval, and $\\Phi_i$ denote the binary variable whether the process is completed. \n",
     "$$\n",
@@ -309,9 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
