--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -205,8 +205,9 @@
    "source": [
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-C_1(x)\\\\\n",
-    "\\text{subject to:}\\qquad& \\sum_{j = t_i}^m x_{ij} \\geq s_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{maximize}}\\qquad& Tu(x)+F(x)+R(x)+Th(x)-C_1(x)\\\\\n",
+    "\\text{subject to:}\\qquad& \\sum_{j = t_i}^m x_{ij} - s_i \\leq M \\Phi_i - \\epsilon(1-\\Phi_i) \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum_{j = t_i}^m x_{ij} - s_i \\geq m (1-\\Phi_i)+ \\epsilon \\Phi_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{j = 1}^{t_i} x_{ij} = 0 \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{i=1}^n x_{ij} \\leq 1 \\qquad \\forall j \\in \\mathcal{T}\\\\\n",
     "& x_{ij} \\in \\{0,1\\} \\qquad \\forall i \\in \\mathcal{N} \\quad j \\in \\mathcal{T}\n",
@@ -224,9 +225,9 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^{n×m×c}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)-C_1(x)-C_2(x) \\\\\n",
-    "\\text{subject to:}\\qquad& \\sum_{k = 1}^c \\sum_{j = t_i}^m x_{ijk} \\geq s_i \\quad \\forall i \\in \\mathcal{N}\\\\\n",
-    "& \\sum_{k = 1}^c \\sum_{j = 1}^{t_i} x_{ijk} = 0 \\quad \\forall i \\in \\mathcal{N}\\\\\n",
+    "\\underset{x \\in \\mathbb{R^{n×m×c}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)+Th(x)-C_1(x)-C_2(x) \\\\\n",
+    "\\text{subject to:}\\qquad& \\sum_{k = 1}^c \\sum_{j = t_i}^m x_{ijk} - s_i \\leq M \\Phi_i - \\epsilon(1-\\Phi_i) \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum_{k = 1}^c \\sum_{j = t_i}^m x_{ijk} - s_i \\geq m (1-\\Phi_i)+ \\epsilon \\Phi_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{i=1}^n x_{ijk} \\leq 1 \\quad \\forall j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\\\\\n",
     "& x_{ijk} \\in \\{0,1\\} \\quad \\forall i \\in \\mathcal{N} \\quad j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\n",
     "\\end{aligned}\n",
