--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -132,9 +132,9 @@
     "\n",
     "### 2.2. Metric for Objectives ###\n",
     "\n",
-    "- Turnaround time: Let $A_{i}$, $F_{i}$, and $D_{i}$ be the arrival time, finish time, and duration of the i-th process respectively. Thus the metric for the turnaround time is:\n",
+    "- Turnaround time: Let $A_{i}$, $F_{i}$, and $s_{i}$ be the arrival time, finish time, and duration of the i-th process respectively. Thus the metric for the turnaround time is:\n",
     "<br><br>\n",
-    "$$Tu(\\boldsymbol{X})=\\frac{\\sum_{i=1}^n (F_{i}-A_{i})}{\\sum_{i=1}^n D_{i}}$$\n",
+    "$$Tu(\\boldsymbol{X})=\\frac{\\sum_{i=1}^n (F_{i}-A_{i})}{\\sum_{i=1}^n s_{i}}$$\n",
     "<br>\n",
     "- Fairness: Let $W_{i}$ be the total amount of waiting time for the i-th process(after the arrival and before complete), then fairness can be measured by the variance:\n",
     "<br><br>\n",
@@ -144,9 +144,9 @@
     "\\mu = \\frac{\\sum_{i=1}^n W_{i}}{n}\n",
     "$$\n",
     "<br>\n",
-    "- Responsiveness: Let $S_{i}$ be the time when the process i first being served, and the metric is:\n",
+    "- Responsiveness: Let $E_{i}$ be the time when the process i first being executed, and the metric is:\n",
     "<br><br>\n",
-    "$$R(\\boldsymbol{X})=\\sum_{i=1}^n S_i$$\n",
+    "$$R(\\boldsymbol{X})=\\sum_{i=1}^n E_i$$\n",
     "<br>\n",
     "- Cost: Let $\\Psi(p, q, i, j)$ be the context switch cost of switching on core $p$ from process i to process j, and process j' previous state information is stored near core $q$. The cost of each context switch is:\n",
     "<br><br>\n",
@@ -318,7 +318,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
