--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -289,15 +289,13 @@
    "source": [
     "## 3. Solution ##\n",
     "\n",
-    "*Modified by Tao Ji <jitaoivan@outlook.com> on May 4, 2018*"
+    "*Modified by Tao Ji <jitaoivan@outlook.com> on May 5, 2018*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -314,13 +312,36 @@
     "num_tasks = 5\n",
     "A = [0, 2, 4, 6, 8]\n",
     "D = [3, 6, 4, 5, 2]\n",
-    "max_time = minimum(A) + sum(D)\n",
+    "max_time = minimum(A) + sum(D)                 # TO BE SETTLED\n",
     "\n",
     "using JuMP, Gurobi\n",
     "\n",
     "m = Model(solver=GurobiSolver(OutputFlag=0))\n",
+    "\n",
     "@variable(m, x[1:num_tasks, 1:max_time], Bin)  # x[i, j] == 1 => task i gets executed at time j\n",
-    "@variable(m, 0 <= F[1:num_tasks] <= max_time, Int) # Finish time of each task\n",
+    "\n",
+    "@variable(m, 0 .<= F[1:num_tasks] .<= max_time, Int) # Finish time of each task\n",
+    "\n",
+    "@variable(m, 0 .<= S[1:num_tasks] .<= max_time, Int) # Start time of each task\n",
+    "@variable(m, S_y[1:num_tasks, 1:max_time] >= 0, Int) # Assisting variable of start time\n",
+    "@variable(m, S_z[1:num_tasks, 1:max_time], Bin)      # Assisting variable of start time\n",
+    "\n",
+    "@variable(m, 0 .<= W[1:num_tasks] .<= max_time, Int) # Waiting time of each task\n",
+    "\n",
+    "for i = 1:num_tasks\n",
+    "    @constraint (m, W[i] == max_time - sum(x[i]))\n",
+    "end\n",
+    "\n",
+    "# Expressing S\n",
+    "for i = 1:num_tasks\n",
+    "    for j = 1:max_time\n",
+    "        @constraint(m, S_y[i, j] == sum(x[i,1:j]))\n",
+    "    end\n",
+    "end\n",
+    "@constraint(m, S_y[i] - 1 .<= max_time*S_z[i] - 0.000001*(1-S_z[i])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "@constraint(m, S_y[i] .>= 0.000001*S_z[i])                           # aTx −b ≥ m(1−z) + εz\n",
+    "\n",
+    "\n",
     "for i = 1:num_tasks\n",
     "    for j = 1:(A[i]-1)\n",
     "        @constraint(m, x[i,j] == 0)            # A task should not be worked on before it arrives\n",
@@ -330,9 +351,12 @@
     "    end\n",
     "    @constraint(m, sum(x[i]) == 0)             # Total time quantums occupied by the task should be equal to its length\n",
     "end\n",
+    "\n",
     "for j = 1:max_time\n",
     "    @constraint(m, sum(x[:,j]) <= 1)           # Each time quantum should be occupied by at most 1 task\n",
-    "end\n"
+    "end\n",
+    "\n",
+    "@objective()"
    ]
   },
   {
