--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -312,20 +312,33 @@
    "source": [
     "## 3. Solution ##\n",
     "\n",
-    "*Modified by Tao Ji <jitaoivan@outlook.com> on May 5, 2018*"
+    "*Modified by Tao Ji <jitaoivan@outlook.com> on May 5, 2018*\n",
+    "\n",
+    "### 3.1 Perfect Knowledge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mRecompiling stale cache file C:\\Users\\tao\\.julia\\lib\\v0.6\\Gurobi.ji for module Gurobi.\n",
-      "\u001b[39m"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mBoundsError: attempt to access 5×19 Array{JuMP.Variable,2} at index [6, Base.Slice(Base.OneTo(19))]\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mBoundsError: attempt to access 5×19 Array{JuMP.Variable,2} at index [6, Base.Slice(Base.OneTo(19))]\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] \u001b[1mthrow_boundserror\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Array{JuMP.Variable,2}, ::Tuple{Int64,Base.Slice{Base.OneTo{Int64}}}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\abstractarray.jl:434\u001b[22m\u001b[22m",
+      " [2] \u001b[1mcheckbounds\u001b[22m\u001b[22m at \u001b[1m.\\abstractarray.jl:362\u001b[22m\u001b[22m [inlined]",
+      " [3] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m.\\multidimensional.jl:494\u001b[22m\u001b[22m [inlined]",
+      " [4] \u001b[1m_getindex\u001b[22m\u001b[22m at \u001b[1m.\\multidimensional.jl:491\u001b[22m\u001b[22m [inlined]",
+      " [5] \u001b[1mgetindex\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Array{JuMP.Variable,2}, ::Int64, ::Colon\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\abstractarray.jl:883\u001b[22m\u001b[22m",
+      " [6] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1mC:\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\Users\\tao\\AppData\\Local\\JuliaPro-0.6.2.1\\pkgs-0.6.2.1\\v0.6\\JuMP\\src\\macros.jl:422\u001b[22m\u001b[22m [inlined]",
+      " [7] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m.\\In[42]:41\u001b[22m\u001b[22m [inlined]",
+      " [8] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m.\\<missing>:?\u001b[22m\u001b[22m",
+      " [9] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:522\u001b[22m\u001b[22m"
      ]
     }
    ],
@@ -335,36 +348,65 @@
     "num_tasks = 5\n",
     "A = [0, 2, 4, 6, 8]\n",
     "D = [3, 6, 4, 5, 2]\n",
-    "max_time = minimum(A) + sum(D)                 # TO BE SETTLED\n",
+    "max_time = 20                 # TO BE SETTLED\n",
+    "psi_1 = 0.4\n",
     "\n",
-    "using JuMP, Gurobi\n",
+    "\n",
+    "using JuMP, ConditionalJuMP, Gurobi\n",
     "\n",
     "m = Model(solver=GurobiSolver(OutputFlag=0))\n",
     "\n",
-    "@variable(m, x[1:num_tasks, 1:max_time], Bin)  # x[i, j] == 1 => task i gets executed at time j\n",
+    "@variable(m, x[1:num_tasks, 1:max_time], Bin)  # x[i, j] == 1 <=> task i gets executed at time j\n",
     "\n",
-    "@variable(m, 0 .<= F[1:num_tasks] .<= max_time, Int) # Finish time of each task\n",
+    "@variable(m, 0 <= F[1:num_tasks] <= max_time, Int) # Finish time of each task\n",
     "\n",
-    "@variable(m, 0 .<= S[1:num_tasks] .<= max_time, Int) # Start time of each task\n",
-    "@variable(m, S_y[1:num_tasks, 1:max_time] >= 0, Int) # Assisting variable of start time\n",
-    "@variable(m, S_z[1:num_tasks, 1:max_time], Bin)      # Assisting variable of start time\n",
+    "@variable(m, 0 <= E[1:num_tasks] <= max_time, Int) # Start time of each task\n",
+    "@variable(m, E_y[1:num_tasks, 1:max_time] >= 0, Int) # Assistant variable of start time\n",
+    "@variable(m, E_z[1:num_tasks, 1:max_time], Bin)      # Assistant variable of start time\n",
     "\n",
-    "@variable(m, 0 .<= W[1:num_tasks] .<= max_time, Int) # Waiting time of each task\n",
+    "@variable(m, 0 <= W[1:num_tasks] <= max_time, Int) # Waiting time of each task\n",
     "\n",
+    "@variable(m, Psi[1:max_time-1], Bin) # Psi[i] == 1 <=> there is context switch between time i and i+1\n",
+    "@variable(m, Psi_y[1:num_tasks, 1:max_time-1] >= 0, Int) # Assistant variable for context switch\n",
+    "@variable(m, Psi_z[1:num_tasks, 1:max_time-1], Bin)      # Assistant variable for context switch\n",
+    "\n",
+    "@variable(m, Phi[1:num_tasks], Bin) # Phi[i] == 1 <=> Task [i] is finished\n",
+    "\n",
+    "\n",
+    "# Expressing Phi\n",
     "for i = 1:num_tasks\n",
-    "    @constraint (m, W[i] == max_time - sum(x[i]))\n",
+    "    @implies(m, (sum(x[i,:]) >= D[i]) => (Phi[i] == 1))\n",
+    "    @implies(m, (sum(x[i,:]) <= D[i]-1) => (Phi[i] == 0))\n",
     "end\n",
     "\n",
-    "# Expressing S\n",
+    "# Expressing Psi\n",
+    "for i = 1:max_time-1\n",
+    "    @constraint(m, Psi_y[i,:] .== x[:,i+1] .+ x[:,i])\n",
+    "    \n",
+    "    @constraint(m, Psi_y[i,:] - 1 .<= max_time*Psi_z[i,:] - 0.000001*(1-Psi_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "    \n",
+    "    @constraint(m, Psi_y[i,:] .>= 0.000001*Psi_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
+    "    @constraint(m, Psi[i] == 2 - sum(Psi_z[i,:]))\n",
+    "end\n",
+    "\n",
+    "# Expressing W\n",
     "for i = 1:num_tasks\n",
+    "    @constraint (m, W[i] == F[i] - sum(x[i,:])) # Waiting time is the number of zero time slots\n",
+    "end\n",
+    "\n",
+    "# Expressing E\n",
+    "for i = 1:num_tasks \n",
     "    for j = 1:max_time\n",
-    "        @constraint(m, S_y[i, j] == sum(x[i,1:j]))\n",
+    "        @constraint(m, E_y[i, j] == sum(x[i,1:j]))\n",
     "    end\n",
     "end\n",
-    "@constraint(m, S_y[i] - 1 .<= max_time*S_z[i] - 0.000001*(1-S_z[i])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "@constraint(m, S_y[i] .>= 0.000001*S_z[i])                           # aTx −b ≥ m(1−z) + εz\n",
+    "@constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i] - 0.000001*(1-E_z[i])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "@constraint(m, E_y[i] .>= 0.000001*E_z[i])                           # aTx −b ≥ m(1−z) + εz\n",
+    "for i = 1:num_tasks\n",
+    "    @constraint(m, E[i] == sum(1-E_z[i]))\n",
+    "end\n",
     "\n",
-    "\n",
+    "# Other constraints\n",
     "for i = 1:num_tasks\n",
     "    for j = 1:(A[i]-1)\n",
     "        @constraint(m, x[i,j] == 0)            # A task should not be worked on before it arrives\n",
@@ -379,7 +421,18 @@
     "    @constraint(m, sum(x[:,j]) <= 1)           # Each time quantum should be occupied by at most 1 task\n",
     "end\n",
     "\n",
-    "@objective()"
+    "@expression(m, Tu_x, sum(F-A)/sum(D))\n",
+    "@expression(m, mu, sum(W)/num_tasks)\n",
+    "@expression(m, sigma, sum((W-mu).^2)/num_tasks)\n",
+    "@expression(m, F_x, sigma^2)\n",
+    "@expression(m, R_x, sum(E))\n",
+    "@expression(m, Th_x, sum(Phi))\n",
+    "@expression(m, C1_x, sum(Psi))\n",
+    "@objective(m, Min, Tu_x + F_x + R_x - Th_x + C1_x )\n",
+    "\n",
+    "status = solve(m)\n",
+    "println(status)\n",
+    "println(getvalue(x))"
    ]
   },
   {
